--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,25 @@
 nav {
   border: 1px solid black;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  background-color: lightgrey;
+  position: sticky;
+  top: 0;
 }
 
 nav h1{
-  float: left;
+  margin-left: 1em;
 }
 
 nav ul{
-  float: right;
+
   display: flex;
   align-items: baseline;
 }
 
 ul li{
-  float: left;
+
   padding:0  1.5em;
   list-style-type: none;
 }
@@ -22,10 +28,7 @@ ul li:not(:first-child){
   border-left: 1px solid black;
 }
 
-
-
-.clearfix::after{
-  clear: both;
-  display: table;
-  content: "";
+.article1 {
+  display: flex;
+  flex-direction: column;
 }
